Fix edit button not showing and allow Header component in grid summary (#2512)
* render header in grid-summary and fix edit button issue

* fallback to components title and then fallback to component itself

--- a/src/layout/Grid/GridSummary.module.css
+++ b/src/layout/Grid/GridSummary.module.css
@@ -158,3 +158,16 @@ tr > .fullWidthCellLast {
   text-align: left;
   font-weight: 500;
 }
+
+.visuallyHidden {
+  border: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
